--- a/online-zoo/scss/components/_donation_diagram.scss
+++ b/online-zoo/scss/components/_donation_diagram.scss
@@ -117,17 +117,18 @@
   .donation {
     &_diagram {
       width: 300px;
-      height: 20px;
+      height: 13px;
     }
 
     &_line {
-      width: 254px;
-      margin-left: 30px;
-      top: 10px;
+      height: 1px;
+      width: 245px;
+      margin-left: 25px;
+      top: 5px;
     }
 
     &_list {
-      padding-top: 9px;
+      padding-top: 4px;
     }
 
     &_link {
@@ -137,6 +138,7 @@
     &_link-item {
       width: 5px;
       height: 5px;
+      margin-left: 7px;
     }
 
     &_link-number {
